# Nora

./: .env.example  README.md
Test/: README.md  pyproject.toml
Test/bot/: __init__.py  __main__.py  config.py  main.py
Test/bot/cogs/: status.py
Test/bot/core/: bot.py
Test/bot/services/: music.py  status.py
bot/: logging_config.py
bot/cogs/: general.py  music.py
bot/services/: __init__.py
